<resources>
    <string name="app_name">Bet Book</string>
    <string name="button">Make Madlib</string>

    <!-- Login Screen -->
    <string name="MainLogin_username">Username</string>
    <string name="MainLogin_password">Password</string>
    <string name="MainLogin_signin">Sign In</string>

    <!-- Home Screen -->
    <string name="Home_createBet">Create new Bet</string>

    <!-- Create Bet Screen -->
    <string name="CreateBet_saveBet">Save and Start Bet</string>
    <string name="CreateBet_Title">Bet Title</string>
    <string name="CreateBet_Description">Bet Description</string>
    <string name="CreateBet_Involved">People Involved:</string>
    <string name="CreateBet_Amount">Bet Value</string>

    <!-- Show Bet Screen -->
    <string name="ShowBet_saveBet">Save and Start Bet</string>
    <string name="ShowBet_Title">Bet Title</string>
    <string name="ShowBet_Description">Bet Description</string>
    <string name="ShowBet_Involved">People Involved:</string>
    <string name="ShowBet_Amount">Bet Value</string>
    <string name="ShowBet_editBet">Edit</string>
</resources>
