<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.zainzulfiqar.betbook.CreateBet">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/titleText"
        style="@style/FullWidthTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CreateBet_Title" />

    <EditText
        android:id="@+id/title"
        style="@style/FullWidthEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:hint="The title of the bet" />

    <TextView
        style="@style/FullWidthTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CreateBet_Description" />

    <EditText
        android:id="@+id/description"
        style="@style/FullWidthEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:hint="The description of the bet"
        android:inputType="textMultiLine" />

    <TextView
        style="@style/FullWidthTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CreateBet_Involved" />

    <EditText
        android:id="@+id/involved"
        style="@style/FullWidthEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:hint="Separate names with commas" />

    <TextView
        style="@style/FullWidthTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/CreateBet_Amount" />

    <EditText
        android:id="@+id/amount"
        style="@style/FullWidthEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="fill_horizontal"
        android:hint="ex. 10.00"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/saveBet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/text_padding"
        android:theme="@style/MaterialButton"
        android:text="@string/CreateBet_saveBet" />


</LinearLayout>
